--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="card text-center mb-3">
       <div class="card-header">
         <div class="card-body">
-          <h5 class="card-title mt-3">Membership Feature <span class="badge purple">New</span></h5>
+          <h5 class="card-title mt-3">RAJA IMPIAN STORE</h5>
           <p class="card-text">Links & Tools</p>
           <!-- <hr class="hr mb-4" /> -->
           <div class="row">
