--- a/prime.html
+++ b/prime.html
@@ -1,1 +1,31 @@
-<h1>PRIME VIDEO</h1>
+<div class="table-responsive">
+                                    <table class="table table-bordered table-striped zero-configuration mb-0">
+                                        <thead>
+                                            <tr>
+                                                <th class="text-center" rowspan="2" style="vertical-align:middle">ID</th>
+                                                <th class="text-center" rowspan="2" style="vertical-align:middle">Name</th>
+                                                <th class="text-center" colspan="2" style="vertical-align:middle">Price/K</th>
+                                                <th class="text-center" rowspan="2" style="vertical-align:middle">Status</th>
+                                            </tr>
+                                            <tr>
+                                                <th class="text-center">Basic</th>
+                                                <th class="text-center">Premium</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="pricelist3">                <tr>
+                    <td>AMZPRIME1P1U-S1</td>
+                    <td>Shared 1 Bulan [ 1 PROFILE - 1 USER ]</td>
+                    <td>Rp 6.513</td>
+                    <td>Rp 6.500</td>
+                    <td align="center"><font color="green"><i class="far fa-check-circle mr-1"></i>Available</font></td>
+                </tr>
+                                <tr>
+                    <td>AMZPRIME5P-S1</td>
+                    <td>Private 1 Bulan [ 1 AKUN - 5 PROFILE ]</td>
+                    <td>Rp 16.032</td>
+                    <td>Rp 16.000</td>
+                    <td align="center"><font color="green"><i class="far fa-check-circle mr-1"></i>Available</font></td>
+                </tr>
+                </tbody>
+                                    </table>
+                                </div>
