--- a/prime.html
+++ b/prime.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-                                    <table class="table table-bordered table-striped zero-configuration mb-0">
+                                    <table class="table table-bordered">
                                         <thead>
                                             <tr>
                                                 <th class="text-center" rowspan="2" style="vertical-align:middle">ID</th>
