--- a/prime.html
+++ b/prime.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.9.2/css/flag-icons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <br>
+<center><h1>AMAZON PRIME VIDEO</h1></center>
 <div class="table-responsive">
                                     <table class="table table-bordered">
                                         <thead>
