--- a/prime.html
+++ b/prime.html
@@ -11,34 +11,69 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <br>
 <center><h1>AMAZON PRIME VIDEO</h1></center>
-<div class="table-responsive">
-                                    <table class="table table-bordered">
-                                        <thead>
-                                            <tr>
-                                                <th class="text-center" rowspan="2" style="vertical-align:middle">ID</th>
-                                                <th class="text-center" rowspan="2" style="vertical-align:middle">Name</th>
-                                                <th class="text-center" colspan="2" style="vertical-align:middle">Price/K</th>
-                                                <th class="text-center" rowspan="2" style="vertical-align:middle">Status</th>
-                                            </tr>
-                                            <tr>
-                                                <th class="text-center">Basic</th>
-                                                <th class="text-center">Premium</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody id="pricelist3">                <tr>
-                    <td>AMZPRIME1P1U-S1</td>
-                    <td>Shared 1 Bulan [ 1 PROFILE - 1 USER ]</td>
-                    <td>Rp 6.513</td>
-                    <td>Rp 6.500</td>
-                    <td align="center"><font color="green"><i class="far fa-check-circle mr-1"></i>Available</font></td>
-                </tr>
-                                <tr>
-                    <td>AMZPRIME5P-S1</td>
-                    <td>Private 1 Bulan [ 1 AKUN - 5 PROFILE ]</td>
-                    <td>Rp 16.032</td>
-                    <td>Rp 16.000</td>
-                    <td align="center"><font color="green"><i class="far fa-check-circle mr-1"></i>Available</font></td>
-                </tr>
-                </tbody>
-                                    </table>
-                                </div>
+
+<!-- Content -->
+    <div class="row">
+      <div class="col col-lg-5 col-md-12">
+        <div class="card text-center col-12 mb-4">
+          <div class="card-header">
+            <div class="card-body">
+              <h5 class="card-title"><span id="copyPw">Fake</span> Info Singapore</h5>
+              <p class="card-text">Generator</p>
+              <hr class="hr" />
+
+              
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card text-center mb-5">
+          <div class="card-header">
+            <div class="card-body">
+              <h5 class="card-title">My Information</h5>
+              <p class="card-text">Informasi</p>
+              <hr class="hr" />
+
+              <div class="input-group mt-3">
+                <button class="input-group-text disabled"><i class="bi bi-wifi"></i></i></button>
+                <div id="ip" class="form-control mx-2"></div>
+                </button>
+              </div>
+              <div class="input-group mt-3">
+                <button class="input-group-text disabled"><i class="bi bi-map"></i></button>
+                <div id="location" class="form-control mx-2"></div>
+                </button>
+              </div>
+              <div class="input-group mt-3">
+                <button class="input-group-text disabled"><i class="bi bi-globe"></i></button>
+                <div id="country" class="form-control mx-2 px-5"></div>
+                <button class="input-group-text disabled"><i class="bi bi-mailbox"></i></button>
+                <div id="countryCode" class="form-control mx-2"></div>
+                </button>
+                <div class="input-group mt-3">
+                  <button class="input-group-text disabled"><i class="bi bi-flag"></i></button>
+                  <div id="timezone" class="form-control mx-2 px-5"></div>
+                  </button>
+                  <button class="input-group-text disabled"><i class="bi bi-currency-dollar"></i></button>
+                  <div id="currency" class="form-control mx-2"></div>
+                  </button>
+                </div>
+              </div>
+
+              <div class="input-group mt-3">
+                <button class="input-group-text disabled"><i class="bi bi-person"></i></button>
+                <div id="userAgent" class="form-control mx-2"></div>
+                </button>
+              </div>
+              <div class="input-group mt-3">
+                <button class="input-group-text disabled"><i class="bi bi-clock"></i></button>
+                <div id="currentTime" class="form-control mx-2"></div>
+                </button>
+              </div>
+
+
+
+            </div>
+          </div>
+        </div>
